tests/bad/this_outside_class.td
/// fail: Variable this not found

this = 5
